--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ethereumjs-testrpc": "^6.0.1",
     "solc": "^0.4.18",
     "truffle": "^4.0.1"
   }
